examples/test/testpolicy19311.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19311
  namespace: namespace258
spec:
  podSelector:
    matchLabels:
      key44: value14
      key7: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value47
          key25: value27
      podSelector:
        matchLabels:
          key13: value11
          key48: value21
